# hub-broker-service

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: prometheus.yml
crates/client-service/: Cargo.toml
crates/client-service/src/: config.rs  main.rs  sync_loop.rs  websocket_client.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  tenant.rs  types.rs  utils.rs
crates/hub-broker/: Cargo.toml
crates/hub-broker/migrations/: 20240101000001_init.sql
crates/hub-broker/src/: auth.rs  config.rs  main.rs  metrics.rs  routing.rs  server.rs  storage.rs  websocket.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: codec.rs  lib.rs  messages.rs
crates/sync-engine/: Cargo.toml
crates/sync-engine/src/: cdc.rs  conflict.rs  lib.rs  replication.rs
docs/: ARCHITECTURE.md  QUICKSTART.md
