[workspace]
resolver = "2"
members = [
    "crates/hub-broker",
    "crates/client-service",
    "crates/common",
    "crates/protocol",
    "crates/sync-engine",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hub Broker Team"]
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Web Framework & WebSocket
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
hyper = "1.1"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-native-tls", "uuid", "chrono", "migrate"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "streams"] }
deadpool-redis = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Security
jsonwebtoken = "9.2"
argon2 = "0.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
sha2 = "0.10"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
metrics = "0.21"
metrics-exporter-prometheus = "0.13"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.13"
dotenvy = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Utilities
dashmap = "5.5"              # Concurrent HashMap
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"         # Better mutex/rwlock
once_cell = "1.19"

# Testing
mockall = "0.12"
criterion = "0.5"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
