[package]
name = "client-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "client-service"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
protocol = { path = "../protocol" }
sync-engine = { path = "../sync-engine" }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures = { workspace = true }

sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }
dotenvy = { workspace = true }
config = { workspace = true }
