[package]
name = "hub-broker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hub-broker"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
protocol = { path = "../protocol" }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Database
sqlx = { workspace = true }
redis = { workspace = true }
deadpool-redis = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Security
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Config
config = { workspace = true }
dotenvy = { workspace = true }

# Time
chrono = { workspace = true }

# Utilities
dashmap = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
